@@ -3321,9 +3321,9 @@
       </component>
     </version>
   </module>
-  <module name="xpdf">
+  <module name="gpdf">
     <version release="gnome-1.4-extras">
-      <component name="xpdf" dir="xpdf">
+      <component name="gpdf" dir="gpdf">
 	<podir dir="po"/>
 	<potname name="gpdf.pot"/>
 	<branch name="gpdf-for-gnome-1-4"/>
@@ -3332,7 +3332,7 @@
       </component>
     </version>
     <version release="gnome-2.1-extras">
-      <component name="xpdf" dir="xpdf">
+      <component name="gpdf" dir="gpdf">
 	<podir dir="po"/>
 	<potname name="gpdf.pot"/>
 	<branch name="HEAD"/>
