@@ -1,3 +1,7 @@
+2003-01-24  Carlos Perelló Marín <carlos@gnome-db.org>
+
+	* translation-status.xml: Renamed xpdf to gpdf.
+
 2003-01-23  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Seahorse has been branched. Reflect this.
